--- a/config/upstart/rni_model.conf
+++ b/config/upstart/rni_model.conf
@@ -62,7 +62,7 @@ exec /bin/bash <<'EOT'
   git checkout master -f
   git pull origin master
   source venv/bin/activate
-  make web
+  python service/web_server.py 8080
 
 EOT
 end script
